@@ -55,6 +55,7 @@ This speeds up copying large files a lot while saving the disk space.
 ** 'make-custom-port' now honors its #:conversion-strategy argument
 ** Hashing of UTF-8 symbols with non-ASCII characters avoids corruption
    (<https://bugs.gnu.org/56413>)
+** 'eval-string' respects #:column (previously it was set to the #:line)
 
 This issue could cause `scm_from_utf8_symbol' and
 `scm_from_utf8_symboln` to incorrectly conclude that the symbol hadn't
